--- a/gvty.cabal
+++ b/gvty.cabal
@@ -15,6 +15,10 @@ build-type:          Simple
 cabal-version:       >=1.8
 
 executable gvty
-   main-is:          gvty.hs
+  main-is:           gvty.hs
+  -- ghc-options:       -optl-mwindows
   -- other-modules:
-  build-depends:     base ==4.6.*, GLUT ==2.4.*
+  build-depends:     base == 4.6.*,
+                     mtl  == 2.2.*,
+                     lens == 4.3.*,
+                     GLUT == 2.4.*
